--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
      crossorigin="anonymous"></script>
     <head>
-        <p>Enter your password here to go to the coresponding page</p>
+        <p>Enter your password here to go to the corresponding page</p>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
             var password = "pagetest";
@@ -14,8 +14,8 @@
             var url2 = "https://www.coderunner.me/filesharing.html";
             var password3 = "adlimbo";
             var url3 = "https://www.coderunner.me/ads.html";
-            var password4 = "placeholder4";
-            var url4 = "https://www.coderunner.me/index.html";
+            var password4 = "ilikemen";
+            var url4 = "https://www.coderunner.me/blocked.html";
             var password5 = "password5";
             var url5 = "https://www.twitter.com";
             var password6 = "password6";
