--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <a href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
         </body>
         <footer> 
-            <p1> (not) © Jacob Crocker 2023</p1>
+            <p1> <br><br><br>(not) © Jacob Crocker 2023</p1>
             <a href="mailto:admin@coderunner.me"><br>Contact me!</a>
             
         </footer>
