--- a/blocked.html
+++ b/blocked.html
@@ -8,6 +8,6 @@
     <p1>Please contact me or use an authorized IP address.</p1>
     <a href="mailto:admin@coderunner.me"><br>Contact me!</a>
   </body>
-
+<!-- password authentication incoming! -->
   
 </html>
