--- a/blocked.html
+++ b/blocked.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>IP BLOCKED</title>
-    <h1 style="color:Tomato;">Your IP address is blocked from viewing this page.</h1>
+    <h1 style="color:Tomato; text-align:center;">Your IP address is blocked from viewing this page.</h1>
   </head>
   <body> 
     <p1>Please contact me or use an authorized IP address.</p1>
