--- a/blocked.html
+++ b/blocked.html
@@ -5,7 +5,7 @@
     <h1 style="color:Tomato; text-align:center;">Your IP address is blocked from viewing this page.</h1>
   </head>
   <body> 
-    <p1 style="text-align:center;">Please contact me or use an authorized IP address.</p1>
+    <p style="text-align:center;">Please contact me or use an authorized IP address.</p1>
     <a style="text-align:center;" href="mailto:admin@coderunner.me"><br>Contact me!</a>
   </body>
 <!-- password authentication incoming! -->
