--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title>password</title>
-        <h1>Welcome to coderunner.me!</h1>
+        <h1 style="text-align:center;">Welcome to coderunner.me!</h1>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
      crossorigin="anonymous"></script>
     <head>
-        <p>Enter your password here to go to the corresponding page</p>
+        <p style="text-align:center;">Enter your password here to go to the corresponding page</p>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
             var password = "pagetest";
@@ -127,14 +127,14 @@
             const analytics = getAnalytics(app);
         </script>
 
-        <input type="text" id="input">
+        <input style="text-align:center;" type="text" id="input">
         <button onclick="check()">check</button>
-        <p11> <br><br>Quick links!: <br> </p11>
-        <a href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
+        <p style="text-align:center;"> <br><br>Quick links!: <br> </p11>
+        <a style="text-align:center;" href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
         </body>
         <footer> 
-            <p1> <br><br><br>(not) © Jacob Crocker 2023</p1>
-            <a href="mailto:admin@coderunner.me"><br>Contact me!</a>
+            <p style="text-align:center;"> <br><br><br>(not) © Jacob Crocker 2023</p1>
+            <a style="text-align:center;" href="mailto:admin@coderunner.me"><br>Contact me!</a>
             
         </footer>
 </html>
