--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
             const app = initializeApp(firebaseConfig);
             const analytics = getAnalytics(app);
         </script>
-
-        <input style="text-align:center;" type="text" id="input">
+        <center>
+            <input type="text" id="input">
+        </center>
+        
         <button onclick="check()">check</button>
         <p style="text-align:center;"> <br><br>Quick links!: <br> </p11>
         <a style="text-align:center;" href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
