--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
             const analytics = getAnalytics(app);
         </script>
         <center>
-            <input type="text" id="input">
+            <input type="text" id="input"> <button onclick="check()">check</button>
         </center>
         
-        <button onclick="check()">check</button>
+        
         <p style="text-align:center;"> <br><br>Quick links!: <br> </p11>
         <a style="text-align:center;" href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
         </body>
