--- a/quotes.html
+++ b/quotes.html
@@ -3,12 +3,14 @@
   <head>
     <title>Quotes</title>
   </head>
-  <center> 
-    <h1>Questonable quotes</h1>
-    <p1>Xavier Medlock:
-    <br> "Why be scared of abortion when you could be scared of deportion" <br>
-    </p1>
-    <p10> <br> ------------ <br> </p10>
-    <a href="https://www.coderunner.me/index.html">Click to return to main page</a>
-  </center>
+  <body>
+      <center> 
+        <h1>Questonable quotes</h1>
+        <p1>Xavier Medlock:
+        <br> "Why be scared of abortion when you could be scared of deportion" <br>
+        </p1>
+        <p10> <br> ------------ <br> </p10>
+        <a href="https://www.coderunner.me/index.html">Click to return to main page</a>
+      </center>
+  </body>
 </html>
