--- a/math.html
+++ b/math.html
@@ -3,5 +3,7 @@
   <title> uh oh</title>
 </head>
 <body>
-  <iframe src="https://www.desmos.com/calculator/lclr91pyuk" title="math"></iframe>
+  <center>
+    <iframe src="https://www.desmos.com/calculator/lclr91pyuk" height="1080" width="1080" title="math"></iframe>
+  </center>
 </body>
