--- a/math.html
+++ b/math.html
@@ -5,5 +5,6 @@
 <body>
   <center>
     <iframe src="https://www.desmos.com/calculator/lclr91pyuk" height="768" width="1024" title="math"></iframe>
+    <a href="https://www.desmos.com/calculator/lclr91pyuk"><br>https://www.desmos.com/calculator/lclr91pyuk</a>
   </center>
 </body>
