--- a/test.html
+++ b/test.html
@@ -2,6 +2,6 @@
   <header>
     <title>multi page test</title>
     <h1>coderunner.me page test.</h1>
-    <p>if you see this my test worked.</p>
+    <p>I PURGED IT OH NO</p>
   <header>
 <html>
