--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             var password3 = "adlimbo";
             var url3 = "https://www.coderunner.me/ads.html";
             var password4 = "ilikemen";
-            var url4 = "https://www.coderunner.me/blocked.html";
+            var url4 = "https://www.coderunner.me/admin.html";
             var password5 = "password5";
             var url5 = "https://www.twitter.com";
             var password6 = "password6";
