--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
             var password = "pagetest";
-            var url = "https://www.coderunner.me/test.html";
+            var url = "https://www.coderunner.me/test";
             var password2 = "filesharing";
-            var url2 = "https://www.coderunner.me/filesharing.html";
+            var url2 = "https://www.coderunner.me/filesharing";
             var password3 = "adlimbo";
-            var url3 = "https://www.coderunner.me/ads.html";
+            var url3 = "https://www.coderunner.me/ads";
             var password4 = "ilikemen";
-            var url4 = "https://www.coderunner.me/admin.html";
+            var url4 = "https://www.coderunner.me/admin";
             var password5 = "password5";
             var url5 = "https://www.twitter.com";
             var password6 = "password6";
@@ -132,7 +132,7 @@
         
         
         <p style="text-align:center;"> <br><br>Quick links!: <br> </p11>
-        <a style="text-align:center;" href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
+        <a style="text-align:center;" href="https://www.coderunner.me/quotes">Click here to go to quotes page.</a>
         </body>
         <footer> 
             <p style="text-align:center;"> <br><br><br>(not) © Jacob Crocker 2023</p1>
