--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             var url3 = "https://www.coderunner.me/ads";
             var password4 = "ilikemen";
             var url4 = "https://www.coderunner.me/admin";
-            var password5 = "password5";
-            var url5 = "https://www.twitter.com";
+            var password5 = "logstest";
+            var url5 = "https://men.coderunner.me";
             var password6 = "password6";
             var url6 = "https://www.instagram.com";
             var password7 = "password7";
