--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             var password5 = "logstest";
             var url5 = "https://men.coderunner.me";
             var password6 = "password6";
-            var url6 = "https://www.instagram.com";
+            var url6 = "https://fourbigguys.fun";
             var password7 = "password7";
             var url7 = "https://www.netflix.com";
             var password8 = "password8";
