--- a/gpt.html
+++ b/gpt.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <center>
-    <iframe src="https://chat.openai.com/" height="768" width="1024" title="i like"></iframe>
+    <iframe src="https://www.google.com/" height="768" width="1024" title="i like"></iframe>
     <a href="https://chat.openai.com/"><br>https://chat.openai.com/</a>
   </center>
 </body>
