--- a/gpt.html
+++ b/gpt.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <center>
-    <iframe src="https://google.com/" height="768" width="1024" title="i like"></iframe>
-    <a href="https://chat.openai.com/"><br>https://chat.openai.com/</a>
+    <iframe src="https://google.com/?safe=active&ssui=on" height="768" width="1024" title="i like"></iframe>
+    <a href="https://google.com/?safe=active&ssui=on/"><br>https://google.com/?safe=active&ssui=on</a>
   </center>
 </body>
