--- a/index.html
+++ b/index.html
@@ -106,25 +106,27 @@
     </head>
     <body>
         <script type="module">
-            // Import the functions you need from the SDKs you need
-            import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
-            import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
-            // TODO: Add SDKs for Firebase products that you want to use
-            // https://firebase.google.com/docs/web/setup#available-libraries
-            // Your web app's Firebase configuration
-            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-            const firebaseConfig = {
-                apiKey: "AIzaSyChEvixQ9bwidUl8lYd0OA0g2jipK9bzLI",
-                authDomain: "coderunnerme.firebaseapp.com",
-                projectId: "coderunnerme",
-                storageBucket: "coderunnerme.appspot.com",
-                messagingSenderId: "5462217235",
-                appId: "1:5462217235:web:8ead8bb1a7bf6e1b7de5e6",
-                measurementId: "G-H8VEMZM2PH"
-            };
-            // Initialize Firebase
-            const app = initializeApp(firebaseConfig);
-            const analytics = getAnalytics(app);
+          // Import the functions you need from the SDKs you need
+          import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+          import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+          // TODO: Add SDKs for Firebase products that you want to use
+          // https://firebase.google.com/docs/web/setup#available-libraries
+        
+          // Your web app's Firebase configuration
+          // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+          const firebaseConfig = {
+            apiKey: "AIzaSyBH3LvyIKTVeEZ4KYFbxFAWumn2B9GtzTE",
+            authDomain: "cmepass-391c3.firebaseapp.com",
+            projectId: "cmepass-391c3",
+            storageBucket: "cmepass-391c3.appspot.com",
+            messagingSenderId: "495360510420",
+            appId: "1:495360510420:web:338107bc68b5f0bb7e2e41",
+            measurementId: "G-DL15HN05NG"
+          };
+        
+          // Initialize Firebase
+          const app = initializeApp(firebaseConfig);
+          const analytics = getAnalytics(app);
         </script>
         <center>
             <input type="text" id="input"> <button onclick="check()">check</button>
