--- a/gpt.html
+++ b/gpt.html
@@ -8,47 +8,47 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
     <script>
-      // Your web app's Firebase configuration
-      const firebaseConfig = {
-        apiKey: "AIzaSyBH3LvyIKTVeEZ4KYFbxFAWumn2B9GtzTE",
-        authDomain: "cmepass-391c3.firebaseapp.com",
-        projectId: "cmepass-391c3",
-        storageBucket: "cmepass-391c3.appspot.com",
-        messagingSenderId: "495360510420",
-        appId: "1:495360510420:web:338107bc68b5f0bb7e2e41",
-        measurementId: "G-DL15HN05NG"
-      };
+      document.addEventListener('DOMContentLoaded', function() {
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+          apiKey: "AIzaSyBH3LvyIKTVeEZ4KYFbxFAWumn2B9GtzTE",
+          authDomain: "cmepass-391c3.firebaseapp.com",
+          projectId: "cmepass-391c3",
+          storageBucket: "cmepass-391c3.appspot.com",
+          messagingSenderId: "495360510420",
+          appId: "1:495360510420:web:338107bc68b5f0bb7e2e41",
+          measurementId: "G-DL15HN05NG"
+        };
 
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-      const auth = firebase.auth();
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+        const auth = firebase.auth();
 
-      // Sign in function
-      function signIn() {
-        var email = document.getElementById('email').value;
-        var password = document.getElementById('password').value;
-        auth.signInWithEmailAndPassword(email, password)
-          .then((userCredential) => {
-            // Signed in
-            document.getElementById('status').innerText = 'Logged in successfully. Welcome, ' + userCredential.user.email;
-          })
-          .catch((error) => {
-            var errorCode = error.code;
-            var errorMessage = error.message;
-            document.getElementById('status').innerText = 'Error: ' + errorMessage;
-          });
-      }
+        // Handle form submission
+        document.getElementById('login-form').addEventListener('submit', function(e) {
+          e.preventDefault();
+          var email = document.getElementById('email').value;
+          var password = document.getElementById('password').value;
+          auth.signInWithEmailAndPassword(email, password)
+            .then((userCredential) => {
+              document.getElementById('status').innerText = 'Logged in successfully. Welcome, ' + userCredential.user.email;
+            })
+            .catch((error) => {
+              var errorCode = error.code;
+              var errorMessage = error.message;
+              document.getElementById('status').innerText = 'Error: ' + errorMessage;
+            });
+        });
 
-      // Auth state changes
-      auth.onAuthStateChanged((user) => {
-        if (user) {
-          // User is signed in
-          document.getElementById('status').innerText = 'User is currently signed in';
-        } else {
-          // User is signed out
-          document.getElementById('status').innerText = 'User is signed out';
-        }
+        // Auth state changes
+        auth.onAuthStateChanged((user) => {
+          if (user) {
+            document.getElementById('status').innerText = 'User is currently signed in';
+          } else {
+            document.getElementById('status').innerText = 'User is signed out';
+          }
+        });
       });
     </script>
     <style>
@@ -81,13 +81,19 @@
             margin-top: 20px;
             color: #d9534f;
         }
+        form {
+            display: inline-block;
+            text-align: left;
+        }
     </style>
 </head>
 <body>
     <h1>Firebase Authentication Example</h1>
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="signIn()">Sign In</button>
+    <form id="login-form">
+        <input type="email" id="email" placeholder="Email">
+        <input type="password" id="password" placeholder="Password">
+        <button type="submit">Sign In</button>
+    </form>
     <div id="status"></div>
 </body>
 </html>
