--- a/gpt.html
+++ b/gpt.html
@@ -4,51 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firebase Authentication Example</title>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-          apiKey: "AIzaSyBH3LvyIKTVeEZ4KYFbxFAWumn2B9GtzTE",
-          authDomain: "cmepass-391c3.firebaseapp.com",
-          projectId: "cmepass-391c3",
-          storageBucket: "cmepass-391c3.appspot.com",
-          messagingSenderId: "495360510420",
-          appId: "1:495360510420:web:338107bc68b5f0bb7e2e41",
-          measurementId: "G-DL15HN05NG"
-        };
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+      import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-        const auth = firebase.auth();
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyBH3LvyIKTVeEZ4KYFbxFAWumn2B9GtzTE",
+        authDomain: "cmepass-391c3.firebaseapp.com",
+        projectId: "cmepass-391c3",
+        storageBucket: "cmepass-391c3.appspot.com",
+        messagingSenderId: "495360510420",
+        appId: "1:495360510420:web:338107bc68b5f0bb7e2e41",
+        measurementId: "G-DL15HN05NG"
+      };
 
-        // Handle form submission
-        document.getElementById('login-form').addEventListener('submit', function(e) {
-          e.preventDefault();
-          var email = document.getElementById('email').value;
-          var password = document.getElementById('password').value;
-          auth.signInWithEmailAndPassword(email, password)
-            .then((userCredential) => {
-              document.getElementById('status').innerText = 'Logged in successfully. Welcome, ' + userCredential.user.email;
-            })
-            .catch((error) => {
-              var errorCode = error.code;
-              var errorMessage = error.message;
-              document.getElementById('status').innerText = 'Error: ' + errorMessage;
-            });
-        });
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+      const auth = getAuth(app);
 
-        // Auth state changes
-        auth.onAuthStateChanged((user) => {
-          if (user) {
-            document.getElementById('status').innerText = 'User is currently signed in';
-          } else {
-            document.getElementById('status').innerText = 'User is signed out';
-          }
-        });
+      // Sign in function
+      function signIn() {
+        var email = document.getElementById('email').value;
+        var password = document.getElementById('password').value;
+        signInWithEmailAndPassword(auth, email, password)
+          .then((userCredential) => {
+            // Signed in
+            document.getElementById('status').innerText = 'Logged in successfully. Welcome, ' + userCredential.user.email;
+          })
+          .catch((error) => {
+            var errorCode = error.code;
+            var errorMessage = error.message;
+            document.getElementById('status').innerText = 'Error: ' + errorMessage;
+          });
+      }
+
+      // Auth state changes
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          // User is signed in
+          document.getElementById('status').innerText = 'User is currently signed in';
+        } else {
+          // User is signed out
+          document.getElementById('status').innerText = 'User is signed out';
+        }
       });
     </script>
     <style>
@@ -81,19 +83,13 @@
             margin-top: 20px;
             color: #d9534f;
         }
-        form {
-            display: inline-block;
-            text-align: left;
-        }
     </style>
 </head>
 <body>
     <h1>Firebase Authentication Example</h1>
-    <form id="login-form">
-        <input type="email" id="email" placeholder="Email">
-        <input type="password" id="password" placeholder="Password">
-        <button type="submit">Sign In</button>
-    </form>
+    <input type="email" id="email" placeholder="Email">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="signIn()">Sign In</button>
     <div id="status"></div>
 </body>
 </html>
