--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <a style="text-align:center;" href="https://www.coderunner.me/quotes">Click here to go to quotes page.</a>
         </body>
         <footer> 
-            <p style="text-align:center;"> <br><br><br>(not) © Jacob Crocker 2024</p1>
+            <p style="text-align:center;"> <br><br><br>(not) © coderunner 2024</p1>
             <a style="text-align:center;" href="mailto:admin@coderunner.me"><br>Contact me!</a>
             
         </footer>
