--- a/vpn.html
+++ b/vpn.html
@@ -19,6 +19,6 @@
     </style>
 </head>
 <body>
-    <h1>Please disable your VPN.</h1>
+    <h1>Please disable your VPN and try again.</h1>
 </body>
 </html>
